[Feat] Translations update

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,102 +1,105 @@
 {
+    "2020 - Present": "2020 - aktuell",
     "A reset link will be sent if the account exists.": "Ein Reset-Link wird gesendet, wenn das Konto existiert.",
+    "API Design & Development": "API-Design & Entwicklung",
     "About me": "Über mich",
     "Actions": "Aktionen",
     "Appearance": "Aussehen",
     "Are you sure?": "Bist du sicher?",
-    "Author": "Autor",
     "Back to all Categories": "Zurück zu allen Kategorien",
     "Back to all Tags": "Zurück zu allen Tags",
     "Back to all posts": "Zurück zu allen Beiträgen",
+    "Backend Development": "Backend-Entwicklung",
+    "Best Practices": "Best Practices",
     "Blog Categories": "Blog-Kategorien",
     "Blog Posts": "Blog-Beiträge",
     "Blog Tags": "Blog-Tags",
+    "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
+    "CI\/CD pipelines, containerization": "CI\/CD-Pipelines, Containerisierung",
     "Cancel": "Abbrechen",
     "Categories": "Kategorien",
     "Category": "Kategorie",
-    "Category created successfully": "",
-    "Category deleted successfully": "",
-    "Category updated successfully": "",
-    "Comments": "",
-    "Confirm Password": "Passwort bestätigen",
-    "Contact Me": "",
-    "Content": "",
-    "Copy link": "Link kopieren",
-    "Create Category": "",
-    "Create Post": "",
-    "Create Tag": "",
-    "Created": "",
-    "Dark": "Dunkel",
-    "Dashboard": "Dashboard",
-    "Delete": "",
-    "Email": "E-Mail",
-    "Enter your email": "",
+    "Category created successfully": "Kategorie erfolgreich erstellt",
+    "Category deleted successfully": "Kategorie erfolgreich gelöscht",
+    "Category updated successfully": "Kategorie erfolgreich aktualisiert",
+    "Clean code, testing strategies, and development workflows": "Sauberer Code, Teststrategien und Entwicklungsabläufe",
+    "Comments": "Kommentare",
+    "Contact Me": "Kontaktieren Sie mich",
+    "Content": "Inhalt",
+    "Create Category": "Kategorie erstellen",
+    "Create Post": "Beitrag erstellen",
+    "Create Tag": "Tag erstellen",
+    "Created": "Erstellt",
+    "Database & Cache": "Datenbank & Cache",
+    "Database Optimization": "Datenbankoptimierung",
+    "Delete": "Löschen",
+    "Design Patterns": "Entwurfsmuster",
+    "DevOps": "DevOps",
+    "Docker, Linux": "Docker, Linux",
+    "Dominik Jasiński": "Dominik Jasiński",
+    "Enter your email": "Geben Sie Ihre E-Mail ein",
+    "Exploring": "Erkunden",
     "Featured Articles": "Ausgewählte Artikel",
-    "Forgot password?": "",
-    "Forgot your password?": "Passwort vergessen?",
-    "Get notified about new articles and resources on PHP development and DevOps practices": "",
-    "Home": "",
-    "I respect your privacy. Unsubscribe at any time": "",
+    "Forgot password?": "Passwort vergessen?",
+    "Get notified about new articles and resources on PHP development and DevOps practices": "Erhalten Sie Benachrichtigungen über neue Artikel und Ressourcen zur PHP-Entwicklung und DevOps-Praktiken",
+    "Home": "Startseite",
+    "I respect your privacy. Unsubscribe at any time": "Ich respektiere Ihre Privatsphäre. Sie können sich jederzeit abmelden",
+    "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Ich bin ein begeisterter PHP-Entwickler mit umfassender Erfahrung in Laravel und Symfony-Frameworks. Mit 3 Jahren beruflicher Erfahrung spezialisiere ich mich auf das Entwickeln robuster, skalierbarer Webanwendungen und die Implementierung von DevOps-Praktiken, um den Entwicklungsprozess zu optimieren.",
+    "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony Tipps, Muster und architektonische Einblicke",
     "Latest": "Neueste",
-    "Light": "Hell",
-    "Link copied!": "Link kopiert!",
-    "Log in to your account": "",
-    "Log out": "",
-    "Login": "Anmelden",
-    "Logout": "Abmelden",
-    "Manage Categories": "",
-    "Manage Posts": "",
-    "Manage Tags": "",
-    "Name": "Name",
+    "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Führende Backend-Entwicklung mit Laravel und Implementierung von DevOps-Praktiken zur Optimierung des Entwicklungsplans.",
+    "Log in to your account": "Anmelden zu Ihrem Konto",
+    "Log out": "Abmelden",
+    "Manage Categories": "Kategorien verwalten",
+    "Manage Posts": "Beiträge verwalten",
+    "Manage Tags": "Tags verwalten",
+    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Meine technische Reise begann mit PHP, entwickelte sich jedoch schnell weiter, um moderne Entwicklungspraktiken, Containerisierung, CI\/CD-Pipelines und Infrastruktur als Code zu umfassen. Ich glaube an sauberen Code, gründliche Tests und kontinuierliche Verbesserung.",
+    "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Nächster",
     "No posts found": "Keine Beiträge gefunden",
-    "No tags found": "",
+    "No tags found": "Keine Tags gefunden",
     "Oldest": "Älteste",
+    "PHP": "PHP",
+    "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
+    "PHP Developer & DevOps Engineer": "PHP-Entwickler & DevOps-Ingenieur",
+    "PHP Frameworks": "PHP-Frameworks",
     "Page": "Seite",
-    "Panel": "",
+    "Panel": "Panel",
     "Password": "Passwort",
-    "Pick a date": "",
-    "Posts": "",
+    "Performance Optimization": "Leistungsoptimierung",
+    "Pick a date": "Datum auswählen",
+    "Posts": "Beiträge",
     "Previous": "Vorheriger",
-    "Professional Journey": "",
+    "Professional Journey": "Berufliche Reise",
     "Profile": "Profil",
-    "Publish at": "",
-    "Published at": "Veröffentlicht am",
+    "Publish at": "Veröffentlichen am",
+    "Query Performance": "Abfrageleistung",
     "Read more": "Mehr lesen",
     "Read the Blog": "Blog lesen",
-    "Register": "Registrieren",
-    "Related posts": "Ähnliche Beiträge",
-    "Remember me": "Angemeldet bleiben",
-    "Reset Password": "Passwort zurücksetzen",
-    "Save Category": "",
-    "Save Post": "",
-    "Save Tag": "",
-    "Search": "Suchen",
+    "Redis": "Redis",
+    "Save Category": "Kategorie speichern",
+    "Save Post": "Beitrag speichern",
+    "Save Tag": "Tag speichern",
     "Search posts...": "Beiträge suchen...",
-    "Select a category": "",
-    "Send Password Reset Link": "Link zum Zurücksetzen des Passworts senden",
-    "Settings": "Einstellungen",
-    "Share": "Teilen",
+    "Select a category": "Kategorie auswählen",
     "Sort by": "Sortieren nach",
-    "Status": "",
-    "Stay Updated": "",
-    "Submit Comment": "",
-    "Subscribe": "",
-    "System": "System",
-    "Tag": "Tag",
+    "Status": "Status",
+    "Stay Updated": "Bleiben Sie auf dem Laufenden",
+    "Submit Comment": "Kommentar senden",
+    "Subscribe": "Abonnieren",
     "Tags": "Tags",
-    "Technical Skills": "",
-    "This action cannot be undone. This will permanently delete this category.": "",
-    "This action cannot be undone. This will permanently delete this post.": "",
-    "This action cannot be undone. This will permanently delete this tag.": "",
-    "Title": "",
+    "Technical Skills": "Technische Fähigkeiten",
+    "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Technische Einblicke, Best Practices und tiefgehende Analysen zu Laravel, Symfony und modernen DevOps-Lösungen",
+    "Testing (PHPUnit, Pest)": "Testen (PHPUnit, Pest)",
+    "This action cannot be undone. This will permanently delete this post.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieser Beitrag wird dauerhaft gelöscht.",
+    "This action cannot be undone. This will permanently delete this tag.": "Diese Aktion kann nicht rückgängig gemacht werden. Dieses Tag wird dauerhaft gelöscht.",
+    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Durch diesen Blog teile ich meine Erfahrungen, Best Practices und Einblicke in die PHP-Entwicklung und DevOps-Methoden. Egal, ob Sie ein Anfänger oder ein erfahrener Entwickler sind, ich hoffe, dass Sie wertvolle Inhalte finden, die Ihnen auf Ihrer eigenen technischen Reise helfen.",
+    "Title": "Titel",
     "Title A-Z": "Titel A-Z",
     "Title Z-A": "Titel Z-A",
-    "Toggle navigation": "Navigation umschalten",
-    "Toggle theme": "Theme umschalten",
-    "Updated at": "Aktualisiert am",
-    "View all": "",
-    "You have not created any tags yet.": "",
+    "View all": "Alle anzeigen",
+    "You have not created any tags yet.": "Sie haben noch keine Tags erstellt.",
     "auth.failed": "Diese Anmeldeinformationen stimmen nicht mit unseren Aufzeichnungen überein.",
     "auth.password": "Das eingegebene Passwort ist falsch.",
     "auth.throttle": "Zu viele Anmeldeversuche. Bitte versuchen Sie es in :seconds Sekunden erneut.",
