--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,7 @@
 {
+    "2020 - Present": "2020 - Present",
     "A reset link will be sent if the account exists.": "A reset link will be sent if the account exists.",
+    "API Design & Development": "API Design & Development",
     "About me": "About me",
     "Actions": "Actions",
     "Appearance": "Appearance",
@@ -7,15 +9,20 @@
     "Back to all Categories": "Back to all Categories",
     "Back to all Tags": "Back to all Tags",
     "Back to all posts": "Back to all posts",
+    "Backend Development": "Backend Development",
+    "Best Practices": "Best Practices",
     "Blog Categories": "Blog Categories",
     "Blog Posts": "Blog Posts",
     "Blog Tags": "Blog Tags",
+    "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
+    "CI\/CD pipelines, containerization": "CI\/CD pipelines, containerization",
     "Cancel": "Cancel",
     "Categories": "Categories",
     "Category": "Category",
     "Category created successfully": "Category created successfully",
     "Category deleted successfully": "Category deleted successfully",
     "Category updated successfully": "Category updated successfully",
+    "Clean code, testing strategies, and development workflows": "Clean code, testing strategies, and development workflows",
     "Comments": "Comments",
     "Contact Me": "Contact Me",
     "Content": "Content",
@@ -23,34 +30,54 @@
     "Create Post": "Create Post",
     "Create Tag": "Create Tag",
     "Created": "Created",
+    "Database & Cache": "Database & Cache",
+    "Database Optimization": "Database Optimization",
     "Delete": "Delete",
+    "Design Patterns": "Design Patterns",
+    "DevOps": "DevOps",
+    "Docker, Linux": "Docker, Linux",
+    "Dominik Jasiński": "Dominik Jasiński",
     "Enter your email": "Enter your email",
+    "Exploring": "Exploring",
     "Featured Articles": "Featured Articles",
     "Forgot password?": "Forgot password?",
     "Get notified about new articles and resources on PHP development and DevOps practices": "Get notified about new articles and resources on PHP development and DevOps practices",
     "Home": "Home",
     "I respect your privacy. Unsubscribe at any time": "I respect your privacy. Unsubscribe at any time",
+    "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.",
+    "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Laravel & Symfony tips, patterns, and architectural insights": "Laravel & Symfony tips, patterns, and architectural insights",
     "Latest": "Latest",
+    "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.",
     "Log in to your account": "Log in to your account",
     "Log out": "Log out",
     "Manage Categories": "Manage Categories",
     "Manage Posts": "Manage Posts",
     "Manage Tags": "Manage Tags",
+    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.",
+    "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Next",
     "No posts found": "No posts found",
     "No tags found": "No tags found",
     "Oldest": "Oldest",
+    "PHP": "PHP",
+    "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
+    "PHP Developer & DevOps Engineer": "PHP Developer & DevOps Engineer",
+    "PHP Frameworks": "PHP Frameworks",
     "Page": "Page",
     "Panel": "Panel",
     "Password": "Password",
+    "Performance Optimization": "Performance Optimization",
     "Pick a date": "Pick a date",
     "Posts": "Posts",
     "Previous": "Previous",
     "Professional Journey": "Professional Journey",
     "Profile": "Profile",
     "Publish at": "Publish at",
+    "Query Performance": "Query Performance",
     "Read more": "Read more",
     "Read the Blog": "Read the Blog",
+    "Redis": "Redis",
     "Save Category": "Save Category",
     "Save Post": "Save Post",
     "Save Tag": "Save Tag",
@@ -63,9 +90,11 @@
     "Subscribe": "Subscribe",
     "Tags": "Tags",
     "Technical Skills": "Technical Skills",
-    "This action cannot be undone. This will permanently delete this category.": "This action cannot be undone. This will permanently delete this category.",
+    "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions",
+    "Testing (PHPUnit, Pest)": "Testing (PHPUnit, Pest)",
     "This action cannot be undone. This will permanently delete this post.": "This action cannot be undone. This will permanently delete this post.",
     "This action cannot be undone. This will permanently delete this tag.": "This action cannot be undone. This will permanently delete this tag.",
+    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.",
     "Title": "Title",
     "Title A-Z": "Title A-Z",
     "Title Z-A": "Title Z-A",
