--- a/lang/pl.json
+++ b/lang/pl.json
@@ -1,100 +1,103 @@
 {
+    "2020 - Present": "2020 - obecnie",
     "A reset link will be sent if the account exists.": "Link do resetowania hasła zostanie wysłany, jeśli konto istnieje.",
+    "API Design & Development": "Projektowanie i rozwój API",
     "About me": "O mnie",
     "Actions": "Akcje",
     "Appearance": "Wygląd",
     "Are you sure?": "Jesteś pewien?",
-    "Author": "Autor",
     "Back to all Categories": "Wróć do wszystkich kategorii",
     "Back to all Tags": "Wróć do wszystkich tagów",
     "Back to all posts": "Wróć do wszystkich postów",
+    "Backend Development": "Programowanie backendu",
+    "Best Practices": "Najlepsze praktyki",
     "Blog Categories": "Kategorie bloga",
     "Blog Posts": "Posty na blogu",
     "Blog Tags": "Tagi bloga",
+    "CI\/CD (GitHub Actions, GitLab CI)": "CI\/CD (GitHub Actions, GitLab CI)",
+    "CI\/CD pipelines, containerization": "Pipelines CI\/CD, konteneryzacja",
     "Cancel": "Anuluj",
     "Categories": "Kategorie",
     "Category": "Kategoria",
     "Category created successfully": "Kategoria została pomyślnie utworzona",
     "Category deleted successfully": "Kategoria została pomyślnie usunięta",
     "Category updated successfully": "Kategoria została pomyślnie zaktualizowana",
-    "Comments": "",
-    "Confirm Password": "Potwierdź hasło",
-    "Contact Me": "",
-    "Content": "",
-    "Copy link": "Kopiuj link",
+    "Clean code, testing strategies, and development workflows": "Czysty kod, strategie testowania i przepływy pracy",
+    "Comments": "Komentarze",
+    "Contact Me": "Skontaktuj się ze mną",
+    "Content": "Treść",
     "Create Category": "Stwórz kategorię",
     "Create Post": "Stwórz post",
     "Create Tag": "Stwórz tag",
-    "Created": "",
-    "Dark": "Ciemny",
-    "Dashboard": "Panel",
+    "Created": "Utworzono",
+    "Database & Cache": "Baza danych i pamięć podręczna",
+    "Database Optimization": "Optymalizacja bazy danych",
     "Delete": "Usuń",
-    "Email": "Email",
-    "Enter your email": "",
+    "Design Patterns": "Wzorce projektowe",
+    "DevOps": "DevOps",
+    "Docker, Linux": "",
+    "Dominik Jasiński": "Dominik Jasiński",
+    "Enter your email": "Wpisz swój email",
+    "Exploring": "Odkrywanie",
     "Featured Articles": "Artykuły wyróżnione",
-    "Forgot password?": "",
-    "Forgot your password?": "Zapomniałeś hasła?",
-    "Get notified about new articles and resources on PHP development and DevOps practices": "",
+    "Forgot password?": "Zapomniałeś hasła?",
+    "Get notified about new articles and resources on PHP development and DevOps practices": "Otrzymuj powiadomienia o nowych artykułach i zasobach dotyczących programowania w PHP i praktyk DevOps",
     "Home": "Strona główna",
-    "I respect your privacy. Unsubscribe at any time": "",
+    "I respect your privacy. Unsubscribe at any time": "Szanuję Twoją prywatność. Możesz zrezygnować w każdej chwili",
+    "I'm a passionate PHP developer with extensive experience in Laravel and Symfony frameworks. With 3 years of professional experience, I specialize in building robust, scalable web applications and implementing DevOps practices to streamline development workflows.": "Jestem pasjonującym programistą PHP z bogatym doświadczeniem w frameworkach Laravel i Symfony. Z 3-letnim doświadczeniem w branży, specjalizuję się w budowaniu niezawodnych, skalowalnych aplikacji internetowych i implementacji praktyk DevOps w celu płynnego przepływu pracy",
+    "Ideo Sp. z o.o.": "Ideo Sp. z o.o.",
+    "Laravel & Symfony tips, patterns, and architectural insights": "Porady dotyczące Laravel i Symfony, wzorce i spostrzeżenia architektoniczne",
     "Latest": "Najnowsze",
-    "Light": "Jasny",
-    "Link copied!": "Link skopiowany!",
+    "Leading backend development with Laravel and implementing DevOps practices to streamline development workflows.": "Rozwój backendu z użyciem Laravel i implementacja praktyk DevOps w celu płynnego przepływu pracy",
     "Log in to your account": "Zaloguj się do swojego konta",
     "Log out": "Wyloguj się",
-    "Login": "Zaloguj się",
-    "Logout": "Wyloguj się",
     "Manage Categories": "Zarządzaj kategoriami",
     "Manage Posts": "Zarządzaj postami",
     "Manage Tags": "Zarządzaj tagami",
-    "Name": "Imię",
+    "My technical journey started with PHP, but quickly evolved to embrace modern development practices, containerization, CI\/CD pipelines. I believe in clean code, thorough testing, and continuous improvement.": "Moja techniczna podróż rozpoczęła się od PHP, ale szybko ewoluowała, obejmując nowoczesne praktyki rozwoju, konteneryzację, pipelines CI\/CD. Wierzę w czysty kod, dokładne testowanie i ciągłe doskonalenie.",
+    "MySQL, PostgreSQL": "MySQL, PostgreSQL",
     "Next": "Następna",
     "No posts found": "Nie znaleziono żadnych postów",
     "No tags found": "Nie znaleziono tagów",
     "Oldest": "Najstarsze",
+    "PHP": "PHP",
+    "PHP (Laravel, Symfony)": "PHP (Laravel, Symfony)",
+    "PHP Developer & DevOps Engineer": "Programista PHP i inżynier DevOps",
+    "PHP Frameworks": "Frameworki PHP",
     "Page": "Strona",
-    "Panel": "",
+    "Panel": "Panel",
     "Password": "Hasło",
+    "Performance Optimization": "Optymalizacja wydajności",
     "Pick a date": "Wybierz datę",
     "Posts": "Posty",
     "Previous": "Poprzednia",
-    "Professional Journey": "",
+    "Professional Journey": "Profesjonalna podróż",
     "Profile": "Profil",
     "Publish at": "Opublikuj",
-    "Published at": "Opublikowano",
+    "Query Performance": "Wydajność zapytań",
     "Read more": "Czytaj więcej",
     "Read the Blog": "Czytaj bloga",
-    "Register": "Zarejestruj się",
-    "Related posts": "Powiązane posty",
-    "Remember me": "Zapamiętaj mnie",
-    "Reset Password": "Zresetuj hasło",
+    "Redis": "Redis",
     "Save Category": "Zapisz kategorię",
     "Save Post": "Zapisz post",
     "Save Tag": "Zapisz tag",
-    "Search": "Szukaj",
     "Search posts...": "Szukaj postów...",
     "Select a category": "Wybierz kategorię",
-    "Send Password Reset Link": "Wyślij link resetujący hasło",
-    "Settings": "Ustawienia",
-    "Share": "Udostępnij",
     "Sort by": "Sortuj według",
-    "Status": "",
-    "Stay Updated": "",
-    "Submit Comment": "",
+    "Status": "Status",
+    "Stay Updated": "Bądź na bieżąco",
+    "Submit Comment": "Wyślij komentarz",
     "Subscribe": "Subskrybuj",
-    "System": "Systemowy",
-    "Tag": "Tag",
     "Tags": "Tagi",
     "Technical Skills": "Umiejętności techniczne",
-    "This action cannot be undone. This will permanently delete this category.": "Tej akcji nie można cofnąć. To trwale usunie tę kategorię.",
+    "Technical insights, best practices, and deep dives into Laravel, Symfony, and modern DevOps solutions": "Techniczne spostrzeżenia, najlepsze praktyki i dogłębne analizy Laravel, Symfony i nowoczesnych rozwiązań DevOps",
+    "Testing (PHPUnit, Pest)": "Testowanie (PHPUnit, Pest)",
     "This action cannot be undone. This will permanently delete this post.": "Tej akcji nie można cofnąć. To trwale usunie ten post.",
     "This action cannot be undone. This will permanently delete this tag.": "Tej akcji nie można cofnąć. To trwale usunie ten tag.",
+    "Through this blog, I share my experiences, best practices, and insights into PHP development and DevOps methodologies. Whether you're a beginner or an experienced developer, I hope you'll find valuable content that helps you in your own technical journey.": "Poprzez ten blog dzielę się swoimi doświadczeniami, najlepszymi praktykami i spostrzeżeniami dotyczącymi programowania w PHP i metodologii DevOps. Niezależnie od tego, czy jesteś początkującym, czy doświadczonym programistą, mam nadzieję, że znajdziesz wartościowe treści, które pomogą Ci w Twojej własnej technicznej podróży.",
     "Title": "Tytuł",
     "Title A-Z": "Tytuł A-Z",
     "Title Z-A": "Tytuł Z-A",
-    "Toggle navigation": "Przełącz nawigację",
-    "Toggle theme": "Przełącz motyw",
-    "Updated at": "Zaktualizowano",
     "View all": "Pokaż wszystkie",
     "You have not created any tags yet.": "Nie utworzyłeś jeszcze żadnych tagów.",
     "auth.failed": "Błędne dane logowania.",
