[Feat] Translations updates

--- a/lang/de.json
+++ b/lang/de.json
@@ -83,6 +83,8 @@
     "Save Tag": "Tag speichern",
     "Search posts...": "Beiträge suchen...",
     "Select a category": "Kategorie auswählen",
+    "Select tags...": "Tags auswählen...",
+    "Settings": "Einstellungen",
     "Sort by": "Sortieren nach",
     "Status": "Status",
     "Stay Updated": "Bleiben Sie auf dem Laufenden",
