--- a/lang/en.json
+++ b/lang/en.json
@@ -83,6 +83,8 @@
     "Save Tag": "Save Tag",
     "Search posts...": "Search posts...",
     "Select a category": "Select a category",
+    "Select tags...": "Select tags...",
+    "Settings": "Settings",
     "Sort by": "Sort by",
     "Status": "Status",
     "Stay Updated": "Stay Updated",
