--- a/lang/pl.json
+++ b/lang/pl.json
@@ -83,6 +83,8 @@
     "Save Tag": "Zapisz tag",
     "Search posts...": "Szukaj postów...",
     "Select a category": "Wybierz kategorię",
+    "Select tags...": "Wybierz tagi...",
+    "Settings": "Ustawienia",
     "Sort by": "Sortuj według",
     "Status": "Status",
     "Stay Updated": "Bądź na bieżąco",
